--- a/style.css
+++ b/style.css
@@ -136,12 +136,13 @@ body{
   }
 }
 
-@media only screen and (min-width: 512px) and (max-width: 1280px){
+@media only screen and (min-width: 512px) and (max-width: 767px){
   .container .box {
     flex-direction: column;
   }
   .container .box .image {
     width: 100%;
+    margin: auto;
   }
   .container .heading h3 .aah{
     font-size: 50px;
@@ -156,6 +157,40 @@ body{
   }
   .overlay p {
     font-size:  small;
+  }
+}
+
+@media only screen and (min-width: 767px) and (max-width: 999px){
+  .container .heading h3 .aah{
+    font-size: 50px;
+  }
+  .container .heading #des{
+    font-size: 10px;
+    font-weight: 600;
+  }
+  .title {
+    font-size: small;
+    margin-bottom: 1.5em;
+  }
+  .overlay p {
+    font-size:  xx-small;
+  }
+}
+
+@media only screen and (min-width: 999px) and (max-width: 1280px){
+  .container .heading h3 .aah{
+    font-size: 50px;
+  }
+  .container .heading #des{
+    font-size: 10px;
+    font-weight: 600;
+  }
+  .title {
+    font-size: small;
+    margin-bottom: 1.5em;
+  }
+  .overlay p {
+    font-size:  x-small;
   }
 }
 
